# zippy

./: CHANGELOG.md  LICENSE  README.md  cabal.project  flake.nix  hie.yaml  zippy.cabal
app/: Main.hs
src/: Zip.hs
src/Zip/: Archive.hs
zippy/: README.md  zippy.cabal
zippy-benchmarks/: README.md  zippy-benchmarks.cabal
zippy-benchmarks/bench/: Main.hs
zippy-memory/: CHANGELOG.md  README.md  zippy-memory.cabal
zippy-memory/src/Zip/: Memory.hs
zippy-memory/test/: Main.hs
zippy-streaming/: CHANGELOG.md  README.md  zippy-streaming.cabal
zippy-streaming/src/Zip/: Streaming.hs
zippy/app/: Main.hs
zippy/src/: Zip.hs
zippy/src/Zip/: Archive.hs
zippy/test/: Main.hs
