cabal-version:      3.0
name:               zippy-benchmarks
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

benchmark zippy-benchmarks
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:
        base >=4 && <5,
        bytestring,
        filepath,
        streaming-bytestring,
        temporary,
        weigh,
        zippy,
        zippy-streaming
    hs-source-dirs:   bench
    default-language: Haskell98
