cabal-version:      3.0
name:               zippy-streaming
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Zip.Streaming
    build-depends:
        base >=4 && <5,
        bytestring,
        digest,
        streaming,
        streaming-bytestring,
        streaming-commons,
        zippy,
        zlib
    hs-source-dirs:   src
    default-language: Haskell98
