cabal-version:      3.0
name:               zippy
version:            0.1.0.0
-- synopsis:
-- description:
license:            MIT
license-file:       LICENSE
author:             Isaac Elliott
maintainer:         isaace71295@gmail.com
-- copyright:
category:           Data
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
        Zip
        Zip.Archive
    build-depends:
        base >=4 && <5,
        bytestring,
        digest,
        dlist,
        utf8-string,
        vector,
        zlib
    hs-source-dirs:   src
    default-language: Haskell98

executable zippy
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base,
        bytestring,
        optparse-applicative,
        utf8-string,
        zippy
    hs-source-dirs:   app
    default-language: Haskell98

test-suite zippy-tests
    import:           warnings
    type:             exitcode-stdio-1.0
    main-is:          Main.hs
    build-depends:
        base,
        bytestring,
        containers,
        filepath,
        hedgehog,
        mmorph,
        mtl,
        temporary,
        zippy
    hs-source-dirs:   test
    default-language: Haskell98
